--- a/.github/workflows/docker-publish-ghcr.yml
+++ b/.github/workflows/docker-publish-ghcr.yml
@@ -39,6 +39,7 @@ jobs:
         uses: sigstore/cosign-installer@v3
 
       - name: Cosign version
+        if: github.event_name != 'pull_request'
         run: cosign version
 
       - name: Setup Docker buildx
